feat: add config and new authorize